fixed awkward spacing between main header and page headers (for non-home pages)

--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -162,6 +162,9 @@ a {
 }
 
 /* --- Header and Header Content --- */
+#header-pad {
+    padding-top: 120px;
+}
 
 .header {
     top: 0;
